The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.11 [20171103] [svn: r298]
  - add Out of band management control mpage (spl5r01)
  - accept additional tansport acronyms (e.g. ib for srp)
  - power condition mpage: rename fields IDLE->IDLE_A;
    STANDBY->STANDBY_Z; ICT->IACT and SCT->SZCT
  - vpd: decode TransportIDs in SCSI port page
    - decode SCSI Feature sets page (spc5r16)
    - extended inquiry data, sync with spc5r09 + sbc4r11
    - 3 party copy page improvements
    - block limits and block limit extension VPD pages:
      add extra info about corner cases
    - add maximum inquiry|mode_page change logs fields
      to extended inquiry vpd page (spc5r17)
  - command=capacity with --long force read capacity(16)
    with full reporting of response
  - point svn:externals to rev 728 of sg3_utils
  - convert many two valued 'int's to bool
  - shellcheck corrections on scripts
  - upgrade automake to version 1.15 (U16.04)

ChangeLog for sdparm-1.10 [20160222] [svn: r279]
  - add --inhex=FN option for decoding without device present,
    FN is interpreted as response to mode sense(10) command
  - add --raw option to interpret FN as binary (def: ASCII hex)
  - add --pdt=PDT option for use with --inhex=FN
  - --quiet used twice hides changeable, default + saved
  - add IO advice hints grouping mode page (sbc4r06, 8)
  - add Unit serial number VPD page specific sanity check
  - add NO_PI_CHK to Supported block lengths and protection
    types VPD page
  - add Background operation control mpage (sbc4r07)
  - Read-write error recovery mpage: add Misaligned writes
    reporting field (MWR)
  - sync tape mpages with ssc5r02
  - add Block limits extension VPD page
  - add Device constituents VPD page
  - add LB protection VPD page (ssc5r02a)
  - LB provisioning VPD page: expand LBPRZ, add Minimum and